fix mobile-toggle button visibility

--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -74,13 +74,13 @@
             margin: 0.8rem;
             cursor: pointer;
             border: none;
-            background: url("../images/menu-icon.svg");
+            background: url("./images/menu-icon.svg");
             background-repeat: no-repeat;
             background-size: contain;
         }
 
         &__mobile-toggle[aria-expanded="true"] {
-            background: url("../images/icons8-close.svg");
+            background: url("./images/icons8-close.svg");
         }
     }
 }
